# coan2

./: .gitignore  ChangeLog  Doxyfile  Makefile.am  README  configure.ac
distro/: Makefile
distro/deb/: Makefile
distro/deb/osc/: Makefile
distro/rpm/: Makefile  coan-5.1.3.spec  template.spec
distro/rpm/osc/: Makefile
man/: Makefile.am  makeman.sh  man_pod.pl
non-dist-builds/cross/mingw32/: coan-win.cbp
non-dist-builds/cross/mingw64/: coan.cbp
non-dist-builds/linux/codeblocks/coan/: coan.cbp  coan.cbp.cbTemp  coan.depend  coan.layout  coan.layout.cbTemp
non-dist-builds/linux/codelite/coan/: Makefile  coan.mk  coan.project  coan.workspace  coan.workspace.mike_kinghan  coan.workspace.session  cppcheck.list
non-dist-builds/linux/codelite/coan/.codelite/: coan.session  coan.workspace.mike_kinghan  refactoring.db  subversion.conf
non-dist-builds/linux/codelite/coan/Debug/: 2  src_argument_list.cpp.o.d  src_argument_list.o.d  src_canonical.cpp.o.d  src_canonical.o.d  src_chew.cpp.o.d  src_chew.o.d  src_citable.cpp.o.d  src_citable.o.d  src_contradiction.cpp.o.d  src_contradiction.o.d  src_dataset.cpp.o.d  src_dataset.o.d  src_diagnostic.cpp.o.d  src_diagnostic.o.d  src_directive.cpp.o.d  src_directive.o.d  src_expansion.cpp.o.d  src_expansion_base.cpp.o.d  src_explained_expansion.cpp.o.d  src_expression_parser.cpp.o.d  src_expression_parser.o.d  src_file_tree.cpp.o.d  src_file_tree.o.d  src_filesys.cpp.o.d  src_filesys.o.d  src_fs_nix.cpp.o.d  src_fs_nix.o.d  src_fs_win.cpp.o.d  src_fs_win.o.d  src_get_options.cpp.o.d  src_get_options.o.d  src_hash_include.cpp.o.d  src_hash_include.o.d  src_help.cpp.o.d  src_help.o.d  src_if_control.cpp.o.d  src_if_control.o.d  src_integer.cpp.o.d  src_integer.o.d  (+26 more)
non-dist-builds/linux/codelite/coan/Release/: src_argument_list.cpp.o.d  src_argument_list.o.d  src_canonical.cpp.o.d  src_canonical.o.d  src_chew.cpp.o.d  src_chew.o.d  src_citable.cpp.o.d  (+56 more)
non-dist-builds/linux/gcc/: coan.cbp  coan.tag
non-dist-builds/linux/gcc/coan/: coan.project  coan.workspace
non-dist-builds/windows/mingw/: coan.cbp  test.mak  wordsize.cbp
non-dist-builds/windows/mingw32/: coan.cbp
non-dist-builds/windows/mingw64/: coan.cbp
non-dist-builds/windows/vc++/: test.mak  vc++test.pl
non-dist-builds/windows/vc++/coan/: coan.sln  coan.vcxproj  coan.vcxproj.filters
non-dist-builds/windows/vc++/wordsize/: wordsize.vcxproj
perl/: CoanLib.pm  distro.pl  get_version.pl  realpath.pl
python/: coanlib.py  distro.py  get_version.py  realpath.py
sourceforge/: Makefile
src/: Makefile.am  argument_list.cpp  argument_list.h  canonical.cpp  canonical.h  chew.cpp  chew.h  citable.cpp  citable.h  cloner.h  configure.h  contradiction.cpp  contradiction.h  cursor.h  dataset.cpp  dataset.h  diagnostic.cpp  diagnostic.h  directive.cpp  directive.h  directive_type.h  directory.h  directory_common.cpp  directory_common.h  directory_nix.h  directory_win.h  discard_policy_vals.h  eol.h  evaluation.h  expansion_base.cpp  expansion_base.h  explained_expansion.cpp  explained_expansion.h  expression_parser.cpp  expression_parser.cpp.saved  expression_parser.h  expression_parser.h.saved  file_tree.cpp  file_tree.h  filesys.cpp  (+56 more)
test_coan/: Makefile.am  class_TestCase.py  coan_bulk_tester.pl  coan_bulk_tester.py  coan_case_tester.pl  coan_case_tester.py  coan_softlink_tester.pl  coan_softlink_tester.py  coan_spin_tester.pl  coan_spin_tester.py  coan_symbol_rewind_tester.pl  coan_symbol_rewind_tester.py  renumber.py  scrap_dir_tree.pl  scrap_dir_tree.py  wordsize-win.cbp
test_coan/stash/: test0442.c  test0443.c  test0444.c  test0450.c  test0450.c.expect
test_coan/test_cases/: test0045.c  test0045.c.expect  test0047.c  test0047.c.expect  test0050.c  test0050.c.expect  test0051.c  test0053.c  test0054.c  test0054.c.expect  test0057.c.expect  test0142.c  test0142.c.expect  test0143.c  test0143.c.expect  test0162.c.expect  test0163.c.expect  test0164.c  test0164.c.expect  test0177.c  test0187.c.expect  test0188.c.expect  test0189.c.expect  test0190.c.expect  test0191.c.expect  test0192.c.expect  test0193.c.expect  test0194.c.expect  test0195.c.expect  test0196.c.expect  test0197.c.expect  test0198.c.expect  test0200.c.expect  test0201.c.expect  test0202.c.expect  test0203.c.expect  test0204.c.expect  test0205.c  test0205.c.expect  test0206.c.expect  (+118 more)
website/: Makefile  about.php  acknowledge.php  bad_code.c  brief_cv.php  changes.php  coan.css  contact.php  cv.php  docs.php  download.php  home.php  index.php  install.php  test.php  todo.php
(+4 files in other folders)
